--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Preahvihear', sans-serif;
+    color: #FFFFFF;
 }
 
 header {
@@ -43,7 +44,6 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #FFFFFF;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-size: small;
@@ -53,7 +53,7 @@ main {
     width: 70%;
 }
 
-.intro{
+.intro {
     display: flex;
 
 }
@@ -85,16 +85,14 @@ main {
     bottom: 106px;
     left: 105px;
     position: relative;
-    color: #FFFFFF;
     width: max-content;
 }
 
 .img-discription {
-    color: #FFFFFF;
     margin-top: 85px;
 }
 
-.oval{
+.oval {
     display: inline-block;
     position: absolute;
     box-sizing: border-box;
@@ -105,8 +103,30 @@ main {
     height: 59px;
 }
 
-.para-1{
+.para-1 {
     line-height: 33px;
-    color: #FFFFFF;
+    font-size: 22px;
     margin: 80px 0;
+}
+
+.para-2 {
+    margin: 40px 0;
+    font-size: 40px;
+}
+
+.para-3 {
+    margin: 40px 0;
+    font-size: 24px;
+}
+
+.contact {
+    margin: 40px 0;
+}
+
+.contact span {
+    font-size: 25px;
+}
+
+.contact p {
+    font-size: 15px;
 }
