--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ main {
     line-height: 28px;
 }
 
-.work-details{
+.work-details {
     font-size: 40px;
 }
 
@@ -124,6 +124,64 @@ main {
     font-size: 24px;
     line-height: 32px;
 
+}
+
+.making-pic {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.line{
+    width: 0.5px;
+    height: 70px;
+    background-color: blue;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.glow-effect{
+    width: 288px;
+    height: 215px;
+    background: radial-gradient(50% 50% at 50% 50%, #763CAC 1%, rgba(50, 15, 133, 0)99%);
+    position: absolute;
+}
+
+.circle {
+    border: 1px solid #763CAC;
+    border-radius: 50%;
+    width: 397px;
+    height: 221px;
+}
+
+#circle-2{
+    position: absolute;
+    width: 490px;
+}
+
+#circle-3{
+    position: absolute;
+    width: 350px;
+}
+
+#circle-4{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+}
+
+#circle-5{
+    position: absolute;
+    width: 200px;
+    height: 115px;
+}
+
+.making-pic img{
+    position: absolute;
+    width: 74px;
+    border-radius: 45px;
 }
 
 .contact {
