--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
 
 nav {
     width: 100%;
-    height: calc(36vh/2.7);
+    height: calc(50vh/2.7);
     min-height: 40px;
     background: #1A0B2E;
     display: flex;
@@ -47,6 +47,11 @@ nav ul li a {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-size: small;
+}
+
+nav img{
+    width: 62px;
+    border-radius: 30px;
 }
 
 main {
