--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,55 @@ main {
     font-size: 40px;
 }
 
+.up {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dow {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    width: 50%;
+    height: 138px;
+    background-color: #1e0b3a;
+    box-shadow: 1px -5px 12px 0px #6100ff;
+    border-radius: 15px;
+    margin: 19px;
+    display: flex;
+    align-items: center;
+}
+
+.card img {
+    width: 73px;
+    height: fit-content;
+    margin: 0 18px 34px 10px;
+    border-radius: 50%;
+    box-shadow: 0px 20px 17px 1px #6100ff59;
+}
+
+.details p {
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.details button {
+    width: 118px;
+    height: 29px;
+    background: #300657;
+    border: 1.5px solid #693B93;
+    border-radius: 14px;
+    margin-top: 14px;
+    margin-left: 59px;
+}
+
+.details button a {
+    text-decoration: none;
+    color: white;
+}
+
 .para-3 {
     margin: 40px;
     font-size: 24px;
@@ -141,65 +190,6 @@ main {
 .experience {
     display: flex;
 }
-
-.making-pic {
-    width: 100%;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.line {
-    width: 0.5px;
-    height: 70px;
-    background-color: blue;
-    transform: matrix(-1, 0, 0, 1, 0, 0);
-}
-
-.glow-effect {
-    width: 288px;
-    height: 215px;
-    background: radial-gradient(50% 50% at 50% 50%, #763CAC 1%, rgba(50, 15, 133, 0)99%);
-    position: absolute;
-}
-
-.circle {
-    border: 1px solid #763CAC;
-    border-radius: 50%;
-    width: 397px;
-    height: 221px;
-}
-
-#circle-2 {
-    position: absolute;
-    width: 490px;
-}
-
-#circle-3 {
-    position: absolute;
-    width: 350px;
-}
-
-#circle-4 {
-    position: absolute;
-    width: 200px;
-    height: 100px;
-}
-
-#circle-5 {
-    position: absolute;
-    width: 200px;
-    height: 115px;
-}
-
-.making-pic img {
-    position: absolute;
-    width: 74px;
-    border-radius: 45px;
-}
-
 .contact {
     margin: 40px 0;
 }
