--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,40 @@
+@media screen and (max-width:426px) {
+    .card {
+        flex-direction: column;
+        height: 228px;
+        padding: 11px;
+    }
+
+    .name-arrow {
+
+        left: 45px;
+        top: -95px;
+    }
+}
+
+
 @media screen and (max-width:580px) {
+    nav {
+        flex-direction: column;
+        height: 35vh;
+    }
+
+    nav ul{
+        width: 90%;
+    }
+
     .intro {
         flex-direction: column;
         align-items: center;
     }
+
+    .img-container {
+
+        position: relative;
+        right: 20%;
+    }
+
+
 }
 
 
@@ -11,17 +43,19 @@
         width: 90%;
     }
 
-    .img-container {
-        width: fit-content;
-        height: fit-content;
+    .card {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width:1220px) {
+
+    .up,
+    .dow {
+        flex-direction: column;
     }
 
-    .img-container img {
-        width: 11vw;
-    }
-
-    .name-arrow {
-        left: 71px;
-        top: -53px;
+    .card {
+        width: 80%;
     }
 }
