--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ main {
 
 .img-container img {
     margin-top: 30px;
-    width: 8vw;
+    width: 102px;
 }
 
 .name-arrow {
@@ -130,16 +130,15 @@ main {
 
 .work-details {
     font-size: 40px;
+    line-height: 41px;
+    text-align: center;
 }
 
-.up {
-    display: flex;
-    justify-content: space-between;
-}
-
+.up,
 .dow {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .card {
@@ -190,6 +189,7 @@ main {
 .experience {
     display: flex;
 }
+
 .contact {
     margin: 40px 0;
 }
