--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,15 @@ body {
     color: #FFFFFF;
 }
 
+/* all */
+a {
+    text-decoration: none;
+    color: blue;
+    cursor: pointer;
+}
+
+/* end */
+
 header {
     width: 100%;
 }
@@ -56,10 +65,8 @@ nav ul li a {
     height: 1.6em;
     width: 3em;
     display: inline-block;
-    text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-size: small;
-    color: white;
 }
 
 nav img {
@@ -147,7 +154,7 @@ main {
 
 .card {
     width: 50%;
-    height: fit-content;
+    height: 38vh;
     background-color: #1e0b3a;
     box-shadow: 1px -5px 12px 0px #6100ff;
     border-radius: 15px;
@@ -179,8 +186,13 @@ main {
 }
 
 .details button a {
-    text-decoration: none;
     color: white;
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .para-3 {
@@ -199,14 +211,10 @@ main {
     font-size: 14px;
 }
 
-.project-container a {
-    text-decoration: none;
-}
-
 .project h4 {
     font-size: 40px;
     color: #CCD6F6;
-    margin: 11px 0px;
+    margin: 16px 0px 5px 8px;
 }
 
 .pro-detail {
