--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ main {
 
 .card {
     width: 50%;
-    height: 38vh;
+    height: fit-content;
     background-color: #1e0b3a;
     box-shadow: 1px -5px 12px 0px #6100ff;
     border-radius: 15px;
