--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ nav ul li:hover {
 }
 
 nav ul li a {
+    color: white;
     height: 1.6em;
     display: inline-block;
     font-family: 'Roboto', sans-serif;
