--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,5 +82,11 @@
 
     .card {
         width: 80%;
+        box-shadow: 0px 0px 12px 0px #6100ff;
     }
+    
+    .card:hover {
+        box-shadow: 0px 0px 12px 2px #6100ff;
+    }
+    
 }
