--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Preahvihear&family=Roboto&display=swap');
 
+@media screen and (max-width:426px) {
+    .card {
+        flex-direction: column !important;
+        padding: 11px !important;
+        height: fit-content !important;
+    }
+
+    .head-cover {
+        font-size: 38px !important;
+    }
+
+    .oval {
+        width: 117px !important;
+        height: 51px !important;
+        left: 129px !important;
+    }
+
+    .name-arrow {
+
+        left: 45px !important;
+        top: -95px !important;
+    }
+
+    .pro-detail img {
+        width: 285px !important;
+    }
+}
+
+@media screen and (max-width:580px) {
+    nav {
+        flex-direction: column !important;
+        height: fit-content !important;
+    }
+
+    nav ul {
+        width: 90% !important;
+    }
+
+    .intro {
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+
+    .img-container {
+
+        position: relative !important;
+        right: 20% !important;
+    }
+
+    .experience {
+        flex-direction: column-reverse !important;
+    }
+}
+
+
+@media screen and (max-width:770px) {
+    main {
+        width: 90% !important;
+    }
+
+    .card {
+        width: 95% !important;
+    }
+
+    .project h4 {
+        text-align: center !important;
+        line-height: 43px !important;
+        margin-bottom: 20px !important;
+    }
+
+    .pro-detail {
+        flex-direction: column-reverse !important;
+    }
+}
+
+@media screen and (max-width:1220px) {
+
+    .up,
+    .dow {
+        flex-direction: column !important;
+    }
+
+    .card {
+        width: 80% !important;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -10,11 +97,14 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    background: #11071f;
+#root{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+body {
+    background: #11071f;
     font-family: 'Preahvihear', sans-serif;
     color: #FFFFFF;
 }
