--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -97,7 +97,8 @@ html {
     scroll-behavior: smooth;
 }
 
-#root{
+#root {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -261,7 +262,7 @@ main {
     margin: 19px;
     display: flex;
     align-items: center;
-    transition: all 1s;
+    transition: all 1s, transform 2.5s;
 }
 
 .card:hover {
@@ -313,7 +314,7 @@ main {
 }
 
 .project {
-    transition: all 0.7s;
+    transition: all 0.7s, transform 2.5s;
 }
 
 .project:hover {
