--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -163,6 +163,11 @@ nav ul li a {
     display: inline-block;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    transition: 0.4s all;
+}
+
+nav ul li a:hover {
+    color: #008fff;
 }
 
 nav img {
@@ -255,14 +260,14 @@ main {
 
 .card {
     width: 50%;
-    height: calc(18em/2);
+    height: calc(23em/2);
     background-color: #1e0b3a;
     box-shadow: 0px 0px 9px 0px #6100ff;
     border-radius: 15px;
     margin: 19px;
     display: flex;
     align-items: center;
-    transition: all 1s, transform 2s, opacity 2.5s;
+    transition: all 0.5s, transform 1.6s, opacity 2.3s;
 }
 
 .card:hover {
@@ -344,9 +349,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.grp-2 {
     flex-direction: row-reverse;
 }
 
@@ -367,9 +369,9 @@ main {
     width: 382px;
     border-radius: 22px;
     position: relative;
-    right: 25px;
+    right: -15px;
     z-index: -1;
-    box-shadow: -4px -6px 20px 0px #0084ff;
+    box-shadow: -6px -10px 18px 0px #0084ff;
 }
 
 .pro-detail p {
