--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -240,9 +240,9 @@ main {
 }
 
 .para-2 {
-    margin: 40px 0;
-    font-size: 22px;
-    line-height: 28px;
+    margin: 35px 0;
+    font-size: 1em;
+    line-height: 25px;
 }
 
 .work-details {
@@ -308,8 +308,8 @@ main {
 
 .para-3 {
     margin: 40px;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 1.1em;
+    line-height: 26px;
 }
 
 .experience {
