--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -259,7 +259,6 @@ main {
 }
 
 .card {
-    width: 50%;
     height: calc(23em/2);
     background-color: #1e0b3a;
     box-shadow: 0px 0px 9px 0px #6100ff;
@@ -282,9 +281,14 @@ main {
     box-shadow: 0px 20px 17px 1px #6100ff59;
 }
 
+.details h3{
+    text-shadow: 0px 0px 7px white;
+}
+
 .details p {
     font-size: 14px;
     line-height: 19px;
+    text-shadow: 0px 0px 9px white;
 }
 
 .details button {
