--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -375,7 +375,7 @@ main {
     position: relative;
     right: -15px;
     z-index: -1;
-    box-shadow: -6px -10px 18px 0px #0084ff;
+    box-shadow: -6px -6px 13px #0084ff9a;
 }
 
 .pro-detail p {
@@ -414,4 +414,12 @@ main {
 .logos a img:hover {
     background: rgb(0 0 0 / 25%);
     transform: translateY(-8px);
+}
+
+.link{
+    color: blue;
+}
+
+.link:hover{
+    text-decoration: underline;
 }
